# verifytapn

./: .gitignore  CMakeLists.txt  README  README.md
.github/workflows/: build-linux.yml  build-macos-arm.yml  build-macos.yml  build-win.yml
lib/: UPPAAL-dbm-2.0.8.tar  UPPAAL-dbm-2.0.8.tgz
src/: CMakeLists.txt  compile-mac-32-64.sh  compile-mac-32.sh  compile-mac-64.sh  main.cpp
src/Core/: ArgsParser.cpp  ArgsParser.hpp  CMakeLists.txt  VerificationOptions.cpp  VerificationOptions.hpp
src/Core/Query/: AST.cpp  AST.hpp  BadPlaceVisitor.hpp  CMakeLists.txt  NormalizationVisitor.cpp  ToStringVisitor.cpp  TranslationVisitor.cpp  TranslationVisitor.h  Visitor.hpp
src/Core/QueryParser/: AST.cpp  AST.hpp  BadPlaceVisitor.cpp  CMakeLists.txt  ExpressionSatisfiedVisitor.cpp  ExpressionSatisfiedVisitor.hpp  NormalizationVisitor.cpp  NormalizationVisitor.hpp  ToStringVisitor.cpp  ToStringVisitor.hpp  UpwardClosedVisitor.cpp  UpwardClosedVisitor.hpp  flex.ll  grammar.yy
src/Core/SymbolicMarking/: CMakeLists.txt  DBMMarking.cpp  DBMMarking.hpp  DiscreteInclusionMarkingFactory.hpp  DiscretePartInclusionMarking.cpp  DiscretePartInclusionMarking.hpp  UppaalDBMMarkingFactory.hpp
src/Core/TAPN/: CMakeLists.txt  InhibitorArc.hpp  OutputArc.cpp  OutputArc.hpp  Pairing.cpp  TAPNModelBuilder.cpp  TAPNModelBuilder.hpp  TimeInterval.hpp  TimedArcPetriNet.cpp  TimedArcPetriNet.hpp  TimedInputArc.hpp  TimedPlace.hpp  TimedTransition.cpp  TimedTransition.hpp  TransportArc.hpp
src/Core/TAPNParser/: CMakeLists.txt  TAPNXmlParser.cpp  TAPNXmlParser.hpp
src/ReachabilityChecker/: CMakeLists.txt  SuccessorGenerator.cpp  SuccessorGenerator.hpp
src/ReachabilityChecker/PassedWaitingList/: CMakeLists.txt
src/ReachabilityChecker/QueryChecker/: CMakeLists.txt  QueryChecker.cpp  QueryChecker.hpp
src/ReachabilityChecker/Search/: CMakeLists.txt  SearchStrategy.cpp  SearchStrategy.hpp
src/ReachabilityChecker/Trace/: CMakeLists.txt  EntrySolver.cpp  EntrySolver.hpp  TraceStore.cpp  TraceStore.hpp
